# HallBookingSystem

./: app.py  forms.py  models.py  pyproject.toml  requirements.txt  routes.py
attached_assets/: Pasted-May-2025-Sun-Mon-Tue-Wed-Thu-Fri-Sat-27-28-29-30-1-2-3-4-5-6-7-8-9-10-11--1746971496870.txt
static/css/: custom.css
static/js/: calendar.js  main.js
templates/: 404.html  500.html  admin_login.html  base.html  booking.html  booking_list.html  bookings.html  halls.html  index.html  login.html  register.html  user_login.html
templates/admin/: booking_detail.html  dashboard.html  hall_form.html  manage_bookings.html  manage_halls.html  manage_users.html  register.html
templates/incharge/: dashboard.html  login.html
