[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["MATHU-MATHI-M mathu9147@gmail.com"]

[tool.poetry.dependencies]
python = "^3.11"
email-validator = ">=2.2.0"
flask-login = ">=0.6.3"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
sqlalchemy = ">=2.0.40"
wtforms = ">=3.2.1"
flask-wtf = ">=1.2.2"
werkzeug = ">=3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
